erDiagram
    PROVIDER {
        bigint id PK
        string name
        string country
        string network_type
    }

    FEATURE {
        bigint id PK
        string name
        string description
    }

    BAND {
        bigint id PK
        string band_number
        string technology
        string dl_band_class
        string ul_band_class
    }

    COMBO {
        bigint id PK
        string name
        string technology
    }

    DEVICE {
        bigint id PK
        string vendor
        string model_num
        string market_name
        date release_date
    }

    SOFTWARE {
        bigint id PK
        string name
        string platform
        integer ptcrb
        integer svn
        string build_number
        date release_date
        bigint device_id FK
    }

    DEVICE_SOFTWARE_BAND {
        bigint device_id FK
        bigint software_id FK
        bigint band_id FK
    }

    DEVICE_SOFTWARE_COMBO {
        bigint device_id FK
        bigint software_id FK
        bigint combo_id FK
    }

    COMBO_BAND {
        bigint combo_id FK
        bigint band_id FK
    }

    PROVIDER_DEVICE_SOFTWARE_BAND {
        bigint provider_id FK
        bigint device_id FK
        bigint software_id FK
        bigint band_id FK
    }

    PROVIDER_DEVICE_SOFTWARE_COMBO {
        bigint provider_id FK
        bigint device_id FK
        bigint software_id FK
        bigint combo_id FK
    }

    DEVICE_SOFTWARE_PROVIDER_FEATURE {
        bigint device_id FK
        bigint software_id FK
        bigint provider_id FK
        bigint feature_id FK
    }

    DEVICE ||--o{ SOFTWARE : "has"
    DEVICE ||--o{ DEVICE_SOFTWARE_BAND : "supports"
    SOFTWARE ||--o{ DEVICE_SOFTWARE_BAND : "enables"
    BAND ||--o{ DEVICE_SOFTWARE_BAND : "included_in"

    DEVICE ||--o{ DEVICE_SOFTWARE_COMBO : "supports"
    SOFTWARE ||--o{ DEVICE_SOFTWARE_COMBO : "enables"
    COMBO ||--o{ DEVICE_SOFTWARE_COMBO : "available_on"

    COMBO ||--o{ COMBO_BAND : "composed_of"
    BAND ||--o{ COMBO_BAND : "part_of"

    PROVIDER ||--o{ PROVIDER_DEVICE_SOFTWARE_BAND : "controls"
    DEVICE ||--o{ PROVIDER_DEVICE_SOFTWARE_BAND : "restricted_by"
    SOFTWARE ||--o{ PROVIDER_DEVICE_SOFTWARE_BAND : "limited_by"
    BAND ||--o{ PROVIDER_DEVICE_SOFTWARE_BAND : "controlled_by"

    PROVIDER ||--o{ PROVIDER_DEVICE_SOFTWARE_COMBO : "controls"
    DEVICE ||--o{ PROVIDER_DEVICE_SOFTWARE_COMBO : "restricted_by"
    SOFTWARE ||--o{ PROVIDER_DEVICE_SOFTWARE_COMBO : "limited_by"
    COMBO ||--o{ PROVIDER_DEVICE_SOFTWARE_COMBO : "controlled_by"

    DEVICE ||--o{ DEVICE_SOFTWARE_PROVIDER_FEATURE : "feature_on"
    SOFTWARE ||--o{ DEVICE_SOFTWARE_PROVIDER_FEATURE : "feature_in"
    PROVIDER ||--o{ DEVICE_SOFTWARE_PROVIDER_FEATURE : "enables_feature"
    FEATURE ||--o{ DEVICE_SOFTWARE_PROVIDER_FEATURE : "enabled_by"